# src/main/java/eu/nimble/service/bp/processor/ppap/DefaultPpapResponseProcessor.java
@@ -13,6 +13,7 @@ import org.camunda.bpm.engine.delegate.JavaDelegate;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -36,6 +37,7 @@ public class DefaultPpapResponseProcessor implements JavaDelegate{
         // get input variables
         String buyer = variables.get("responderID").toString();
         String seller = variables.get("initiatorID").toString();
+        List<String> relatedProducts = (List<String>) variables.get("relatedProducts");
         PpapResponseType ppapResponseType = (PpapResponseType) variables.get("ppapResponse");
 
         // get application execution configuration
@@ -53,7 +55,7 @@ public class DefaultPpapResponseProcessor implements JavaDelegate{
             IBusinessProcessApplication businessProcessApplication = (IBusinessProcessApplication) instance;
 
             // NOTE: Pay attention to the direction of the document. Here it is from seller to buyer
-            businessProcessApplication.saveDocument(processInstanceId, seller, buyer, ppapResponseType);
+            businessProcessApplication.saveDocument(processInstanceId, seller, buyer, ppapResponseType, relatedProducts);
         } else if(executionType == ExecutionConfiguration.ExecutionTypeEnum.MICROSERVICE) {
             // TODO: How to call a microservice
         } else {
